# quectosofttech-hr-autonomous-agentic-ai

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
alembic/: env.py
docs/: 01_AGENT_CARDS.md  02_DOMAIN_VERTICALS.md  03_ARCHITECTURE.md  04_RUNTIME_PARITY.md  05_MEMORY_TOPOLOGY.md  06_RAID_GOVERNANCE.md  07_PHASE2_EXPANDED_CATALOG_REPORT.md  08_PHASE3_SUPERSET_REPORT.md  09_SECURITY_ARCHITECTURE.md  10_DEPLOYMENT_GUIDE.md  11_OPERATIONS_RUNBOOK.md  12_OBSERVABILITY.md  13_API_REFERENCE.md  14_CATALOG_REFERENCE.md  15_MCP_SERVERS.md  16_WORKSPACE_MODEL.md  17_GOVERNANCE_MODEL.md  18_BOARD_OPERATING_MODEL.md  19_EXECUTIVE_OPERATING_MODEL.md  20_VP_LAYER_MODEL.md  21_CORPORATE_UNITS.md  22_PRESALES_SALES_MODEL.md  23_DOMAIN_GUARDRAILS.md  24_TEST_STRATEGY.md  25_CI_CD.md  26_CHANGELOG.md  27_ROADMAP.md  28_RISK_REGISTER.md  29_AUDIT_TRAIL.md  30_INTEGRATION_GUIDE.md  31_WEBHOOK_GUIDE.md  32_PROJECT_API_GUIDE.md  33_STREAMING_GUIDE.md  34_HITL_GUIDE.md  35_RBAC_GUIDE.md  36_LICENSING.md  37_SPONSORSHIP.md  38_COLLABORATION.md  39_TROUBLESHOOTING.md  40_PRODUCTION_CHECKLIST.md  (+10 more)
scripts/: backup.sh  bootstrap.sh  restore.sh  run-local.sh  test.sh
terraform/: main.tf
tests/: test_cto_signoff_assets.py  test_openclaw.py  test_phase3_runtime.py  test_placeholder_01.py  test_placeholder_02.py  test_placeholder_03.py  test_placeholder_04.py  test_placeholder_05.py  test_placeholder_06.py  (+28 more)
(+279 files in other folders)
