[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "quectosoft-hr-agentic-ai"
version = "0.3.1"
description = "Enterprise autonomous-org HR platform with phase 3 runtime parity superset"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "Quectosoft Technologies LLP"}]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "httpx>=0.27.0",
  "sqlalchemy>=2.0.31",
  "alembic>=1.13.2",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "structlog>=24.4.0",
  "prometheus-client>=0.20.0",
  "python-dotenv>=1.0.1",
  "tenacity>=8.5.0",
  "chromadb>=0.5.5",
  "psycopg2-binary>=2.9.9",
  "pyyaml>=6.0.2",
  "websockets>=13.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "mypy>=1.10.0",
  "pre-commit>=3.7.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/quectosoft_hr"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
